<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_book"
        android:title="@string/menu" />

    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_user"
        android:title="@string/perfil" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/ic_heart"
        android:title="@string/favoritos" />

    <item
        android:id="@+id/navigation_carrito"
        android:icon="@drawable/ic_cart"
        android:title="@string/carrito" />
</menu>