<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/sh_bg_header_police_blue"
        android:paddingHorizontal="16dp"
        android:paddingVertical="36dp"
        android:text="@string/text_header_home"
        android:textColor="@color/flesh"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sh_bg_btn_carmine_pink"
                android:translationZ="5dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnRegistrar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="-32dp"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:text="@string/registrar"
                android:textAllCaps="false"
                android:textColor="@color/gunmetal"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:paddingHorizontal="16dp"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:hint="@string/email"
                android:textColorHint="@color/steel_teal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/sh_bg_btn_bright_gray"
                android:paddingHorizontal="16dp"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/password"
                android:textColorHint="@color/steel_teal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvOlvidastes"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/olvidaste"
            android:textColor="@color/carmine_pink"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/sh_bg_btn_gunmetal"
            android:text="@string/IniciarSesion"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="start|center"
                android:background="@color/carmine_pink"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Inicia sesión con"
                android:textColor="@color/gunmetal"
                android:textStyle="bold" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_gravity="end|center"
                android:background="@color/carmine_pink"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/ivFacebook"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:padding="8dp"
                android:background="@drawable/sh_bg_btn_flesh"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_facebook"
                app:tint="@color/police_blue" />

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/sh_bg_btn_flesh"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_google"
                app:tint="@color/carmine_pink" />

            <ImageView
                android:id="@+id/ivApple"
                android:layout_width="108dp"
                android:layout_height="72dp"
                android:layout_gravity="end"
                android:padding="8dp"
                android:background="@drawable/sh_bg_btn_flesh"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/content_description"
                android:src="@drawable/ic_apple" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center|bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¿Si no tienes una cuenta?"
            android:textColor="@color/gunmetal"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRegistrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Registrate ahora"
            android:textColor="@color/carmine_pink"
            android:textStyle="bold" />

    </LinearLayout>

</FrameLayout>